# p5.py

./: .gitignore  AGENTS.md  README.md  main.py  pyproject.toml
.github/workflows/: ci.yml  publish.yml
backlog/010_foundation_runtime/: backend_protocols.toml  context_state.toml  package_scaffold.toml  sketch_lifecycle.toml
backlog/01_foundation_runtime/: backend_protocols.toml  context_state.toml  package_scaffold.toml  sketch_lifecycle.toml
backlog/020_api_compatibility/: compatibility_matrix.toml  errors_and_overloads.toml  global_mode_api.toml  pythonic_aliases.toml
backlog/02_api_compatibility/: compatibility_matrix.toml  errors_and_overloads.toml  global_mode_api.toml  pythonic_aliases.toml
backlog/030_rendering_2d/: basic_primitives.toml  canvas_management.toml  headless_pillow_renderer.toml  hidpi_pixel_density.toml
backlog/031_native_pyglet_renderer/: basic_native_primitives.toml  hidpi_native_rendering.toml  migration_and_cleanup.toml  pixels_export_fallbacks.toml  renderer_architecture.toml  transforms_paths_curves.toml
backlog/03_rendering_2d/: basic_primitives.toml  canvas_management.toml  headless_pillow_renderer.toml  hidpi_pixel_density.toml  interactive_backend.toml  paths_and_curves.toml
backlog/040_color_style_transform/: color_system.toml  constants_modes.toml  style_stack.toml  transform_stack.toml
backlog/04_color_style_transform/: color_system.toml  constants_modes.toml  style_stack.toml  transform_stack.toml
backlog/050_math_vector_noise/: math_helpers.toml  random_noise.toml  vector_class.toml
backlog/05_math_vector_noise/: math_helpers.toml  random_noise.toml  vector_class.toml
backlog/060_assets_images_text/: data_loading_saving.toml  image_loading_drawing.toml  image_manipulation.toml  text_fonts.toml
backlog/061_native_pyglet_assets_text_export/: native_image_drawing.toml
backlog/062_transformed_image_rendering/: image_transform_semantics.toml
backlog/06_assets_images_text/: data_loading_saving.toml  image_loading_drawing.toml  image_manipulation.toml  text_fonts.toml
backlog/070_input_events/: keyboard_events.toml  mouse_events.toml  touch_events.toml
backlog/07_input_events/: keyboard_events.toml  mouse_events.toml  touch_events.toml
backlog/080_pixels_compositing/: blend_modes.toml  pixel_buffer.toml  save_export.toml
backlog/081_native_pyglet_rendering_parity/: native_pixels_compositing_parity.toml
backlog/08_pixels_compositing/: blend_modes.toml  pixel_buffer.toml  save_export.toml
backlog/090_rust_acceleration/: accelerated_noise_pixels.toml  maturin_pipeline.toml
backlog/091_p5_canvas_foundation/: rust_canvas_crate_bridge.toml  rust_canvas_gpu_foundation.toml
backlog/092_p5_canvas_2d_rendering/: rust_canvas_gpu_2d_renderer.toml
backlog/093_p5_canvas_runtime_input/: rust_canvas_gpu_runtime_presentation.toml
backlog/094_p5_canvas_assets_pixels_export/: rust_canvas_assets_pixels_export.toml
backlog/095_p5_canvas_migration_release/: rust_canvas_migration_release.toml
backlog/09_rust_acceleration/: accelerated_noise_pixels.toml  maturin_pipeline.toml
backlog/100_3d_advanced_media/: model_shader_strategy.toml  sound_media_strategy.toml  webgl_like_renderer.toml
backlog/101_native_3d_media_implementation/: model_loading.toml  sound_playback_analysis.toml  webgl_public_api_primitives.toml  webgl_renderer_activation.toml
backlog/102_native_gpu_webgl_follow_on/: native_pyglet_depth_renderer.toml  shader_pipeline.toml
backlog/103_native_media_video_capture/: native_media_capture.toml
backlog/10_3d_advanced_media/: model_shader_strategy.toml  sound_media_strategy.toml  webgl_like_renderer.toml
backlog/110_quality_docs_release/: plugin_architecture.toml  release_packaging.toml  testing_tooling.toml  user_documentation.toml
backlog/11_quality_docs_release/: plugin_architecture.toml  release_packaging.toml  testing_tooling.toml  user_documentation.toml
backlog/140_reference_gap_closure/: advanced_3d_webgpu_reference_gaps.toml  core_2d_reference_parity.toml  (+3 more)
crates/p5_canvas/: Cargo.toml
crates/p5_canvas/src/: gpu.rs  lib.rs
docs/: README.md  advanced_3d_media_strategy.md  epic_101_kt.md  hidpi_rendering.md  native_pyglet_renderer.md  project_plan.md  rust_acceleration.md
examples/: README.md  accelerated_noise_pixels.py  asteroids.py  audio_controls.py  basic_shapes.py  bouncing_ball.py  color_style_filters.py  custom_shape.py  image_flip_sampling.py  image_text_data.py  input_spaceship.py  pixels_blend_export.py  plugin_hooks.py  simple_platformer.py  transforms.py  vector_noise_flow.py  video_capture.py  video_playback.py  webgl_native_shader.py  webgl_obj_sound.py  webgl_primitives_gallery.py  webgl_texture_orbit.py  webgl_wireframe_prototype.py
old_docs/: README.md
(+195 files in other folders)
