[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "p5-py"
version = "0.1.0"
description = "A Pythonic creative coding package inspired by p5.js."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pillow>=12.2.0",
    "pyglet>=2.1.14",
]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "ruff>=0.15.17",
]

[tool.hatch.build.targets.wheel]
packages = ["src/p5_py"]

[tool.maturin]
manifest-path = "crates/p5_accel/Cargo.toml"
module-name = "p5_py.rust._accelerated"
python-source = "src"
bindings = "pyo3"
features = ["extension-module"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
