[build-system]
requires = ["hatchling>=1.27.0"]
build-backend = "hatchling.build"

[project]
name = "p5-py"
version = "0.1.2"
description = "A Pythonic creative coding package inspired by p5.js."
readme = "README.md"
requires-python = ">=3.12"
license-files = ["LICENSE*"]
keywords = ["creative-coding", "graphics", "p5", "p5js", "python"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Education",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Topic :: Artistic Software",
    "Topic :: Multimedia :: Graphics",
]
dependencies = [
    "pillow>=12.2.0",
    "pyglet>=2.1.14",
]

[project.optional-dependencies]
media = [
    "opencv-python-headless>=4.13.0.92",
]

[dependency-groups]
dev = [
    "mypy>=1.18.2",
    "pytest>=9.0.3",
    "ruff>=0.15.17",
]
release = [
    "maturin>=1.9.4",
]

[tool.hatch.build.targets.wheel]
packages = ["src/p5_py"]

[tool.maturin]
manifest-path = "crates/p5_accel/Cargo.toml"
module-name = "p5_py.rust._accelerated"
python-source = "src"
bindings = "pyo3"
features = ["extension-module"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[tool.mypy]
python_version = "3.12"
files = ["src"]
ignore_missing_imports = true
warn_unused_ignores = true

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.uv]
default-groups = ["dev"]
