[build-system]
requires = ["maturin>=1.9.4,<2"]
build-backend = "maturin"

[project]
name = "p5py_vibe"
version = "0.3.1"
description = "Archived p5py package. Rebranded as Gummy Snake: https://pypi.org/project/gummy-snake/"
readme = "README.md"
requires-python = ">=3.12"
license = "LGPL-2.1-only"
license-files = ["license.txt", "LICENSE*"]
keywords = ["creative-coding", "graphics", "p5", "p5js", "python", "archived", "gummy-snake"]
classifiers = [
    "Development Status :: 7 - Inactive",
    "Intended Audience :: Developers",
    "Intended Audience :: Education",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Topic :: Artistic Software",
    "Topic :: Multimedia :: Graphics",
]
dependencies = []

[project.urls]
"Archived Repository" = "https://github.com/JonathanHHenson/p5.py"
"New Repository" = "https://github.com/JonathanHHenson/gummy_snake"
"New PyPI Project" = "https://pypi.org/project/gummy-snake/"

[project.optional-dependencies]
media = [
    "opencv-python-headless>=4.13.0.92",
]

[dependency-groups]
dev = [
    "mypy>=1.18.2",
    "pytest>=9.0.3",
    "pytest-cov>=7.1.0",
    "ruff>=0.15.17",
]
release = [
    "maturin>=1.9.4",
]

[tool.maturin]
manifest-path = "crates/p5_canvas/Cargo.toml"
module-name = "p5.rust._canvas"
python-source = "src"
bindings = "pyo3"
features = ["extension-module"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
markers = [
    "benchmark: opt-in runtime performance benchmarks",
    "stress: opt-in long-running resource lifecycle stress tests",
]

[tool.mypy]
python_version = "3.12"
files = ["src"]
ignore_missing_imports = true
warn_unused_ignores = true

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.uv]
default-groups = ["dev"]
