[package]
name = "p5_canvas"
version = "0.1.0"
edition = "2021"
publish = false

[lib]
name = "_canvas"
crate-type = ["cdylib", "rlib"]

[dependencies]
ab_glyph = "0.2.32"
bytemuck = { version = "1.25.0", features = ["derive"] }
image = { version = "0.25.8", default-features = false, features = ["png"] }
pollster = "0.4.0"
pyo3 = "0.22.6"
wgpu = "25.0.2"
winit = "0.30.13"

[features]
default = []
extension-module = ["pyo3/extension-module"]
